# syui.github.io

./: .env  .env.example  .gitignore  .gitlab-ci.yml  404.html  :w  CNAME  Cargo.toml  ads.txt  ai.json  app.css  app.js  config.toml  deploy.yml  index.html  index.json  index.xml  package-lock.json  package.json  readme.md  run.sh  sitemap.xml  t.json  theme.toml  tsconfig.json  vite.config.ts  webpack.config.js  wercker.yml
.well-known/: host-meta  keybase.txt  nostr.json
7vEbSIPacF/: .gitignore  docs.md  index.html  package.json  search_index.json
@syui/: index.html
about/: index.html
ai/: index.html  index.xml
ai-star/: index.js
api/: index.html
app/: index.html  index.xml
archetypes/: default.md
archive/: index.html
blog/: index.html  index.xml
bsky/: app.css  app.js  app.js.map  index.html
categories/: index.html  index.xml
content/: about.md  about2.md  about3.md  api.md  archive.md  bsky.md  contribution.md  gamechara.md  gamedoc.md  games.md  gameset.md  icon.md  img-content.md  img.md  img2.md  imgai.md  imgall.md  imgame.md  imgame2.md  imgame3.md  imgauto.md  imgdiff.md  item.md  manga.md  mangaen.md  moji.md  music.md  nyancat.md  pico.md  search.md  sitemap.md  syui-1.md  syui.md
contribution/: index.html
css/: ai.css  blog.css  img.css  nav.css  nyan.css  style.css  svg.css  terminal-nyan.css  terminal.css  terminal.mobile.css
design/: index.html
en/: index.html  index.xml
game/: index.html  index.xml
gamechara/: index.html
gamedoc/: index.html
games/: index.html  index.xml
gameset/: index.html
help/: index.html
(+4144 files in other folders)
